--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a:hover {
 
 :focus {
   outline: none; }
-
+/* the main form */
 .wrapper {
   min-height: 100vh;
   display: flex;
@@ -57,11 +57,12 @@ a:hover {
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   -ms-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2); }
-
+/*text area is deleted in Student Form*/
 textarea {
   resize: none; }
 
 h3 {
+  /*capitalization effect on text */
   text-transform: uppercase;
   font-size: 45px;
   font-family: "Montserrat-Bold";
@@ -112,7 +113,7 @@ p {
       transform: translateY(-22px) scale(0.8); }
       .form-control:focus + span + .border, .form-control:valid + span + .border {
         transform: scaleX(1); }
-
+/* extarea exist just in contact form */
 textarea.form-control {
   padding-top: 10px;
   padding-bottom: 10px; }
